# message-exporters

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/go-sms-pro-exporter-csv/: README.md
crates/go-sms-pro-exporter-csv/src/: main.rs
crates/go-sms-pro-out/: Cargo.toml  README.md
crates/go-sms-pro-out/docs/: XML_CSV_MAPPING.md
crates/go-sms-pro-out/src/: emit.rs  lib.rs  main.rs  mms_enc.rs  pdu.rs  xml.rs
crates/go-sms-pro-out/tests/: convert_smoke.rs
crates/go-sms-pro-to-csv/: .gitignore  Cargo.toml  README.md
crates/go-sms-pro-to-csv/docs/: XML_CSV_MAPPING.md
crates/go-sms-pro-to-csv/src/: emit.rs  lib.rs  main.rs  owner_set.rs  pdu.rs  phone.rs  xml.rs
crates/go-sms-pro-to-csv/tests/: convert_smoke.rs
crates/imazing-out/: Cargo.toml  README.md
crates/imazing-out/docs/: DESIGN.md
crates/imazing-out/sample-output/: _13212462167.csv
crates/imazing-out/src/: emit.rs  lib.rs  main.rs  parse.rs
crates/imazing-out/tests/: convert_smoke.rs
crates/imazing-out/tests/fixtures/: contacts.csv  messages.csv  whatsapp.csv
crates/imazing-out/tests/fixtures/export_root/Contacts/All contacts/All/: Contacts - synthetic.csv
crates/imazing-out/tests/fixtures/export_root/Messages/2020-01-01 12 00 00 - Alice Example & Bob McRoy & Carol Silent/: Messages - synthetic - group.csv
crates/imazing-out/tests/fixtures/export_root/Messages/2020-01-01 12 00 00 - Bob McRoy/: Messages - synthetic - Bob McRoy.csv
crates/imazing-out/tests/fixtures/export_root/WhatsApp/2020-01-01 13 00 00 - Bob McRoy/: WhatsApp - synthetic - Bob McRoy.csv
crates/imazing-to-csv/: Cargo.toml  README.md
crates/imazing-to-csv/src/: emit.rs  lib.rs  main.rs
crates/imazing-to-csv/tests/: convert_smoke.rs
crates/imazing-to-csv/tests/fixtures/: messages.csv
crates/imessage-exporter/: Cargo.toml  README.md
crates/imessage-exporter-csv/: README.md
crates/imessage-exporter/src/app/: options.rs  runtime.rs
crates/imessage-exporter/src/exporters/csv/: mod.rs
crates/imessage-to-csv/: Cargo.toml  README.md
crates/imessage-to-csv/src/app/: options.rs
crates/message-anonymize/: Cargo.toml  README.md
crates/message-anonymize/src/: lib.rs  names.rs
crates/message-contacts/: Cargo.toml  README.md
crates/message-contacts/src/: book.rs  lib.rs  mapping.rs  name.rs  validate.rs  vcf.rs
crates/message-csv/: Cargo.toml
crates/message-csv/src/: date_range.rs  lib.rs  utc_offset.rs
crates/message-exporters-core/: Cargo.toml  README.md
crates/message-exporters-core/src/: exporters.rs  lib.rs  process.rs
crates/message-exporters-fltk-rs/: Cargo.toml  README.md
crates/message-exporters-fltk-rs/src/: main.rs
crates/message-exporters-gui/: Cargo.toml  README.md
crates/message-exporters-gui/src/: exporters.rs  main.rs  process.rs
crates/message-exporters-iced-rs/: Cargo.toml  README.md
crates/message-exporters-iced-rs/src/: main.rs
crates/message-json/: README.md
crates/message-media/: Cargo.toml  README.md
crates/message-media/src/: csv_rewrite.rs  lib.rs  process.rs  size.rs  tools.rs
crates/message-phone/: Cargo.toml
crates/message-phone/src/: lib.rs
crates/openextract-out/: Cargo.toml  README.md
crates/openextract-out/sample-output/: _15555550122.csv
crates/openextract-out/src/: emit.rs  main.rs
crates/openextract-out/tests/: convert_smoke.rs
crates/openextract-out/tests/fixtures/: all_conversations.csv  contacts.vcf
crates/openextract-to-csv/: Cargo.toml  README.md
crates/openextract-to-csv/sample-output/: _15555550122.csv
crates/openextract-to-csv/src/: emit.rs  lib.rs  main.rs  parse.rs
crates/openextract-to-csv/tests/: convert_smoke.rs
crates/sms-backup-plus-exporter/src/: main.rs
crates/sms-backup-plus-out/: Cargo.toml  README.md
crates/sms-backup-plus-out/config/: owner.example.toml
crates/sms-backup-plus-out/docs/: EML_CSV_MAPPING.md
crates/sms-backup-plus-out/sample-output/: _15555550111.csv
crates/sms-backup-plus-out/src/: contacts.rs  emit.rs  identity.rs  lib.rs  main.rs
crates/sms-backup-plus-out/tests/: convert_smoke.rs
crates/sms-backup-plus-to-csv/: .gitignore  Cargo.toml  README.md
crates/sms-backup-plus-to-csv/config/: owner.example.toml
crates/sms-backup-plus-to-csv/docs/: EML_CSV_MAPPING.md  FORMAT.md
crates/sms-backup-plus-to-csv/sample-output/: _15555550122.csv
crates/sms-backup-plus-to-csv/src/: archive.rs  assets.rs  contacts.rs  emit.rs  flat_eml.rs  identity.rs  main.rs
crates/sms-backup-plus-to-csv/tests/: convert_smoke.rs
crates/sms-backup-restore-exporter-csv/: README.md
crates/sms-backup-restore-exporter-csv/src/: main.rs
crates/sms-backup-restore-out/: Cargo.toml  README.md
crates/sms-backup-restore-out/docs/: FIELDS.md  XML_CSV_MAPPING.md
crates/sms-backup-restore-out/src/: emit.rs  lib.rs  main.rs  xml.rs
crates/sms-backup-restore-out/tests/: convert_smoke.rs
crates/sms-backup-restore-to-csv/: Cargo.toml  README.md
crates/sms-backup-restore-to-csv/docs/: FIELDS.md  XML_CSV_MAPPING.md
crates/sms-backup-restore-to-csv/src/: assets.rs  emit.rs  lib.rs  main.rs  owner_set.rs  phone.rs  xml.rs
crates/sms-backup-restore-to-csv/tests/: convert_smoke.rs
docs/: DEVELOPING.md  GUI.md
