[workspace]
resolver = "2"
members = [
    "crates/message-json",
    "crates/go-sms-pro-exporter-csv",
    "crates/sms-backup-restore-exporter-csv",
    "crates/sms-backup-plus-exporter",
    "crates/sms-backup-plus-exporter-csv",
    "crates/imessage-exporter",
    "crates/imessage-exporter-csv",
]

[workspace.dependencies]
message_json = { path = "crates/message-json" }
