[workspace]
resolver = "2"
members = [
    "crates/message-phone",
    "crates/message-csv",
    "crates/message-contacts",
    "crates/message-anonymize",
    "crates/go-sms-pro-to-csv",
    "crates/sms-backup-restore-to-csv",
    "crates/sms-backup-plus-to-csv",
    "crates/openextract-to-csv",
    "crates/imazing-to-csv",
    "crates/imessage-exporter",
]
