[workspace]
resolver = "2"
members = [
    "crates/message-phone",
    "crates/message-csv",
    "crates/message-contacts",
    "crates/message-anonymize",
    "crates/message-media",
    "crates/go-sms-pro-out",
    "crates/sms-backup-restore-out",
    "crates/sms-backup-plus-out",
    "crates/openextract-out",
    "crates/imazing-out",
    "crates/imessage-exporter",
    "crates/message-exporters-core",
    "crates/message-exporters-gui",
]
