[package]
name = "imazing-out"
version = "0.1.0"
edition = "2024"
description = "Convert iMazing Messages / WhatsApp CSV (+ Contacts CSV) to vault-shaped per-chat CSV"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
message-anonymize = { path = "../message-anonymize" }
message-contacts = { path = "../message-contacts" }
message-csv = { path = "../message-csv" }
message-media = { path = "../message-media" }
message-phone = { path = "../message-phone" }
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
