[package]
name = "message-anonymize"
version = "0.1.0"
edition = "2024"
description = "Stable, non-reversible anonymization for message exporter CSV output"
license = "MIT"

[[bin]]
name = "imazing-anonymize"
path = "src/bin/imazing_anonymize.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.2"
regex = "1.13.0"
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
