[package]
name = "message-exporters-gui"
version = "0.1.0"
edition = "2024"
description = "Cross-platform Iced GUI for message-exporters"

[dependencies]
dirs = "6"
iced = "0.14.0"
message-anonymize = { path = "../message-anonymize" }
message-media = { path = "../message-media" }
open = "5"
rfd = "0.17.2"
