[package]
name = "message-exporters-iced-rs"
version = "0.1.0"
edition = "2024"
description = "iced desktop GUI for message-exporters"

[[bin]]
name = "message-exporters-iced-rs"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
iced = { version = "0.14", features = ["tokio", "svg"] }
message-anonymize = { path = "../message-anonymize" }
message-contacts = { path = "../message-contacts" }
message-csv = { path = "../message-csv" }
message-exporters-core = { path = "../message-exporters-core" }
message-media = { path = "../message-media" }
open = "5"
rfd = "0.15"
