[package]
name = "openextract-to-csv"
version = "0.1.0"
edition = "2024"
description = "Convert OpenExtract conversation CSV (+ VCF) to vault-shaped per-chat CSV"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
message-contacts = { path = "../message-contacts" }
message-csv = { path = "../message-csv" }
message-phone = { path = "../message-phone" }

[dev-dependencies]
tempfile = "3.27.0"
